fix horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -253,3 +253,6 @@ html, body {
 .awesomplete {
   display: block;
 }
+.awesomplete .visually-hidden {
+  display: none;
+}
